real final Dockerfile

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,9 +8,16 @@ WORKDIR /dov/frontend
 COPY ./ ./
 RUN chown -R $USER /dov/frontend
 
+USER $USER
+
+# Yarn cache 디렉토리 설정
+ENV YARN_CACHE_FOLDER=/dov/frontend/.yarn_cache
+RUN mkdir -p $YARN_CACHE_FOLDER
+RUN chown -R $USER $YARN_CACHE_FOLDER
+
 RUN yarn install
 
-USER $USER
 EXPOSE 3000
 
 CMD ["yarn", "start"]
+
